deploy: 82b64ff0e563da3c5d47a78d6e661aa3bce5ea5b

--- a/domoticz-telegram/index.html
+++ b/domoticz-telegram/index.html
@@ -72,7 +72,7 @@ Vous allez retrouver votre Chat ID."><meta property="og:image" content="https://
 </h2>
 <div class="post-item post-meta">
 <span><i class="iconfont icon-today-sharp"></i>&nbsp;2019-03-20</span>
-<span><i class="iconfont icon-file-tray-sharp"></i>&nbsp;169 mots</span>
+<span><i class="iconfont icon-file-tray-sharp"></i>&nbsp;175 mots</span>
 <span><i class="iconfont icon-time-sharp"></i>&nbsp;1 minute</span>
 <span><i class="iconfont icon-pricetags-sharp"></i>&nbsp;Aucune étiquette</span>
 </div>
@@ -92,10 +92,11 @@ Pour le copier coller plus facilement il existe une App télégram web <a href=h
 <p>Créé dans l&rsquo;application telegram un nouveau canal.</p>
 <p>Ajouter comme administrateur du canal le nom de notre bot.</p>
 <p>&ldquo;ecrires quelques messages dans le canal&rdquo;</p>
-<p>Aller sur l&rsquo;url <a href=https://api.telegram.org/bot784324329:EETRNJU3jQEGWQdjNv3llb4bnDSDREGuuuL/getUpdates target=_blank>https://api.telegram.org/bot784324329:EETXXXGuuuL/getUpdates</a>
+<p>Aller sur l&rsquo;url <a href=https://api.telegram.org/bot784324329:EETXXXGuuuL/getUpdates target=_blank>https://api.telegram.org/bot784324329:EETXXXGuuuL/getUpdates</a>
 Penser à changer le token avec le votre.</p>
 <p>Vous allez retrouver votre Chat ID. Il peut être négatif.</p>
-<p>Tester votre bot avec l&rsquo;url suivante <a href="https://api.telegram.org/bot784324329:EETRNJU3jQEGWQdjNv3llb4bnDSDREGuuuL/sendMessage?chat_id=1234567&text=Hello" target=_blank>https://api.telegram.org</a></p>
+<p>Tester votre bot avec l&rsquo;url suivante <a href=https://api.telegram.org target=_blank>https://api.telegram.org</a>
+Pour moi avec l&rsquo;url suivante <a href="https://api.telegram.org/bot784324329:EETRNJU3jQEGWQdjNv3llb4bnDSDREGuuuL/sendMessage?chat_id=1234567&text=Hello" target=_blank>https://api.telegram.org/bot784324329:EETRNJU3jQEGWQdjNv3llb4bnDSDREGuuuL/sendMessage?chat_id=1234567&text=Hello</a></p>
 <p>Les liens utils :
 <a href=https://www.domoticz.com/wiki/Telegram_Bot target=_blank>doc officiel de domoticz</a> pas mal mais quelques parties obsolètes ou pas très claires.</p>
 <p>Dans domoticz vous pouvez aller dans Réglages=>Paramètres=>Notification.</p>
