deploy: 5c89917937de4dac013517c41f5acf9b36560e4a

--- a/attaqueddos/index.html
+++ b/attaqueddos/index.html
@@ -17,6 +17,7 @@
 <title>Attaque ddos - WaKaN's blog</title>
 <meta name=author content="wakan">
 <meta name=description content="Un mix de glandouille, informatique, drone, iles et sutour des tests divers">
+<meta name=keywords content="Hacking,Informatique">
 <meta property="og:title" content="Attaque ddos">
 <meta name=twitter:title content="Attaque ddos">
 <meta property="og:type" content="article">
@@ -52,7 +53,7 @@ Ce vecteur est un vecteur difficile à exploiter. Au mieux, on pourrait avertir 
 <span><i class="iconfont icon-today-sharp"></i>&nbsp;2016-10-24</span>
 <span><i class="iconfont icon-file-tray-sharp"></i>&nbsp;359 mots</span>
 <span><i class="iconfont icon-time-sharp"></i>&nbsp;2 minutes</span>
-<span><i class="iconfont icon-pricetags-sharp"></i>&nbsp;Aucune étiquette</span>
+<span><i class="iconfont icon-pricetags-sharp"></i>&nbsp;<a href=/blog/tags/hacking>Hacking</a>&nbsp;<a href=/blog/tags/informatique>Informatique</a>&nbsp;</span>
 </div>
 <div class="post-content markdown-body">
 <h1 id=dyn--attaque-ddos>Dyn : attaque DDoS</h1>
@@ -126,6 +127,12 @@ Cela corrige des failles de sécurité exploitées par les petits hackers sans e
 <div class="sidebar-item sidebar-tags">
 <h3>Étiquettes</h3>
 <div>
+<span>
+<a href=/blog/tags/hacking/>Hacking</a>
+</span>
+<span>
+<a href=/blog/tags/informatique/>Informatique</a>
+</span>
 </div>
 </div>
 <div class="sidebar-item sidebar-toc">
@@ -177,6 +184,12 @@ Cela corrige des failles de sécurité exploitées par les petits hackers sans e
 <div class="sidebar-item sidebar-tags">
 <h3>Étiquettes</h3>
 <div>
+<span>
+<a href=/blog/tags/hacking/>Hacking</a>
+</span>
+<span>
+<a href=/blog/tags/informatique/>Informatique</a>
+</span>
 </div>
 </div>
 <div class="sidebar-item sidebar-toc">
