--- a/deadlinkchecker/index.html
+++ b/deadlinkchecker/index.html
@@ -95,6 +95,12 @@
 <div class="sidebar-item sidebar-tags">
 <h3>Étiquettes</h3>
 <div>
+<span>
+<a href=/blog/tags/hacking/>Hacking</a>
+</span>
+<span>
+<a href=/blog/tags/informatique/>Informatique</a>
+</span>
 </div>
 </div>
 <div class="sidebar-item sidebar-toc">
@@ -143,6 +149,12 @@
 <div class="sidebar-item sidebar-tags">
 <h3>Étiquettes</h3>
 <div>
+<span>
+<a href=/blog/tags/hacking/>Hacking</a>
+</span>
+<span>
+<a href=/blog/tags/informatique/>Informatique</a>
+</span>
 </div>
 </div>
 <div class="sidebar-item sidebar-toc">
