--- a/domoticz-telegram/index.html
+++ b/domoticz-telegram/index.html
@@ -146,6 +146,12 @@ Pour moi avec l&rsquo;url suivante [https://api.telegram.org/bot784324329:EETRNJ
 <div class="sidebar-item sidebar-tags">
 <h3>Étiquettes</h3>
 <div>
+<span>
+<a href=/blog/tags/hacking/>Hacking</a>
+</span>
+<span>
+<a href=/blog/tags/informatique/>Informatique</a>
+</span>
 </div>
 </div>
 <div class="sidebar-item sidebar-toc">
@@ -195,6 +201,12 @@ Pour moi avec l&rsquo;url suivante [https://api.telegram.org/bot784324329:EETRNJ
 <div class="sidebar-item sidebar-tags">
 <h3>Étiquettes</h3>
 <div>
+<span>
+<a href=/blog/tags/hacking/>Hacking</a>
+</span>
+<span>
+<a href=/blog/tags/informatique/>Informatique</a>
+</span>
 </div>
 </div>
 <div class="sidebar-item sidebar-toc">
