--- a/first-hugo-post/index.html
+++ b/first-hugo-post/index.html
@@ -95,6 +95,12 @@ Une fois l&rsquo;après midi passé, ils sont autonomes pour gérer eux-mêmes l
 <div class="sidebar-item sidebar-tags">
 <h3>Étiquettes</h3>
 <div>
+<span>
+<a href=/blog/tags/hacking/>Hacking</a>
+</span>
+<span>
+<a href=/blog/tags/informatique/>Informatique</a>
+</span>
 </div>
 </div>
 <div class="sidebar-item sidebar-toc">
@@ -139,6 +145,12 @@ Une fois l&rsquo;après midi passé, ils sont autonomes pour gérer eux-mêmes l
 <div class="sidebar-item sidebar-tags">
 <h3>Étiquettes</h3>
 <div>
+<span>
+<a href=/blog/tags/hacking/>Hacking</a>
+</span>
+<span>
+<a href=/blog/tags/informatique/>Informatique</a>
+</span>
 </div>
 </div>
 <div class="sidebar-item sidebar-toc">
