--- a/depart-vacance-guyane/index.html
+++ b/depart-vacance-guyane/index.html
@@ -113,6 +113,12 @@ Pour le contrôle de sécurité, c&rsquo;est toujours un peu plus compliqué à 
 <div class="sidebar-item sidebar-tags">
 <h3>Étiquettes</h3>
 <div>
+<span>
+<a href=/blog/tags/hacking/>Hacking</a>
+</span>
+<span>
+<a href=/blog/tags/informatique/>Informatique</a>
+</span>
 </div>
 </div>
 <div class="sidebar-item sidebar-toc">
@@ -157,6 +163,12 @@ Pour le contrôle de sécurité, c&rsquo;est toujours un peu plus compliqué à 
 <div class="sidebar-item sidebar-tags">
 <h3>Étiquettes</h3>
 <div>
+<span>
+<a href=/blog/tags/hacking/>Hacking</a>
+</span>
+<span>
+<a href=/blog/tags/informatique/>Informatique</a>
+</span>
 </div>
 </div>
 <div class="sidebar-item sidebar-toc">
