--- a/dillinger-markdown-editor/index.html
+++ b/dillinger-markdown-editor/index.html
@@ -100,6 +100,12 @@ Il a une prévisualisation instantanée du markdown avec un export pdf pour le d
 <div class="sidebar-item sidebar-tags">
 <h3>Étiquettes</h3>
 <div>
+<span>
+<a href=/blog/tags/hacking/>Hacking</a>
+</span>
+<span>
+<a href=/blog/tags/informatique/>Informatique</a>
+</span>
 </div>
 </div>
 <div class="sidebar-item sidebar-toc">
@@ -144,6 +150,12 @@ Il a une prévisualisation instantanée du markdown avec un export pdf pour le d
 <div class="sidebar-item sidebar-tags">
 <h3>Étiquettes</h3>
 <div>
+<span>
+<a href=/blog/tags/hacking/>Hacking</a>
+</span>
+<span>
+<a href=/blog/tags/informatique/>Informatique</a>
+</span>
 </div>
 </div>
 <div class="sidebar-item sidebar-toc">
