deploy: b98f75a7e56331378ef27c60f2b97fae10730596

--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
 <meta name=theme-color content="#ffffff">
 <title>404 Page not found - WaKaN's blog</title>
 <meta name=author content="wakan">
-<meta name=description content="Un mix de glandouille, informatique, drone, iles et sutour des tests divers">
+<meta name=description content="Un mix de glandouille, informatique, drone, iles et surtout des tests divers">
 <meta property="og:title" content="404 Page not found">
 <meta name=twitter:title content="404 Page not found">
 <meta property="og:type" content="website">
