--- a/deadlinkchecker/index.html
+++ b/deadlinkchecker/index.html
@@ -16,7 +16,7 @@
 <meta name=theme-color content="#ffffff">
 <title>Verification des liens morts sur vos site web - WaKaN's blog</title>
 <meta name=author content="wakan">
-<meta name=description content="Un mix de glandouille, informatique, drone, iles et sutour des tests divers">
+<meta name=description content="Un mix de glandouille, informatique, drone, iles et surtout des tests divers">
 <meta property="og:title" content="Verification des liens morts sur vos site web">
 <meta name=twitter:title content="Verification des liens morts sur vos site web">
 <meta property="og:type" content="article">
@@ -56,11 +56,6 @@
 <p><a href=https://www.deadlinkchecker.com/website-dead-link-checker.asp target=_blank>dealinkchecker</a> permet d&rsquo;avoir un rapport de lien mort sur son site.</p>
 </div>
 </article>
-<div class="license markdown-body">
-<blockquote>
-<p>Sauf indication contraire, le contenu de ce site est mis à disposition selon les termes de la Licence <a rel=license href=http://creativecommons.org/licenses/by-nc-sa/4.0/ target=_blank>CC BY-NC-SA 4.0</a>.</p>
-</blockquote>
-</div>
 <div class=post-comment data-comment=disqus>
 <span class=post-comment-notloaded>
 <i class="iconfont icon-chatbox-ellipses-sharp"></i>&nbsp;Télécharger les commentaires
