--- a/first-hugo-post/index.html
+++ b/first-hugo-post/index.html
@@ -16,7 +16,7 @@
 <meta name=theme-color content="#ffffff">
 <title>Remarques sur le générateur de site hugo - WaKaN's blog</title>
 <meta name=author content="wakan">
-<meta name=description content="Un mix de glandouille, informatique, drone, iles et sutour des tests divers">
+<meta name=description content="Un mix de glandouille, informatique, drone, iles et surtout des tests divers">
 <meta property="og:title" content="Remarques sur le générateur de site hugo">
 <meta name=twitter:title content="Remarques sur le générateur de site hugo">
 <meta property="og:type" content="article">
@@ -56,11 +56,6 @@ Il peut être pratique pour les associations. Il faut leur configurer au début,
 Une fois l&rsquo;après midi passé, ils sont autonomes pour gérer eux-mêmes leurs articles. Un bon point.</p>
 </div>
 </article>
-<div class="license markdown-body">
-<blockquote>
-<p>Sauf indication contraire, le contenu de ce site est mis à disposition selon les termes de la Licence <a rel=license href=http://creativecommons.org/licenses/by-nc-sa/4.0/ target=_blank>CC BY-NC-SA 4.0</a>.</p>
-</blockquote>
-</div>
 <div class=post-comment data-comment=disqus>
 <span class=post-comment-notloaded>
 <i class="iconfont icon-chatbox-ellipses-sharp"></i>&nbsp;Télécharger les commentaires
