--- a/amp/index.html
+++ b/amp/index.html
@@ -16,7 +16,7 @@
 <meta name=theme-color content="#ffffff">
 <title>WaKaN's blog - Microsoft fan blog's.</title>
 <meta name=author content="wakan">
-<meta name=description content="Un mix de glandouille, informatique, drone, iles et sutour des tests divers">
+<meta name=description content="Un mix de glandouille, informatique, drone, iles et surtout des tests divers">
 <link rel=alternate type=application/rss+xml href=https://wakan.github.io/blog/index.xml title="WaKaN's blog">
 <meta property="og:title" content="WaKaN's blog">
 <meta name=twitter:title content="WaKaN's blog">
