--- a/attaqueddos/index.html
+++ b/attaqueddos/index.html
@@ -16,7 +16,7 @@
 <meta name=theme-color content="#ffffff">
 <title>Attaque ddos - WaKaN's blog</title>
 <meta name=author content="wakan">
-<meta name=description content="Un mix de glandouille, informatique, drone, iles et sutour des tests divers">
+<meta name=description content="Un mix de glandouille, informatique, drone, iles et surtout des tests divers">
 <meta name=keywords content="Hacking,Informatique">
 <meta property="og:title" content="Attaque ddos">
 <meta name=twitter:title content="Attaque ddos">
@@ -88,11 +88,6 @@ S&rsquo;il y en a, ce n&rsquo;est pas pour rien.
 Cela corrige des failles de sécurité exploitées par les petits hackers sans envergure.</p>
 </div>
 </article>
-<div class="license markdown-body">
-<blockquote>
-<p>Sauf indication contraire, le contenu de ce site est mis à disposition selon les termes de la Licence <a rel=license href=http://creativecommons.org/licenses/by-nc-sa/4.0/ target=_blank>CC BY-NC-SA 4.0</a>.</p>
-</blockquote>
-</div>
 <div class=post-comment data-comment=disqus>
 <span class=post-comment-notloaded>
 <i class="iconfont icon-chatbox-ellipses-sharp"></i>&nbsp;Télécharger les commentaires
