--- a/dillinger-markdown-editor/index.html
+++ b/dillinger-markdown-editor/index.html
@@ -16,7 +16,7 @@
 <meta name=theme-color content="#ffffff">
 <title>Remarque sur l'éditeur de markdown de dillinger - WaKaN's blog</title>
 <meta name=author content="wakan">
-<meta name=description content="Un mix de glandouille, informatique, drone, iles et sutour des tests divers">
+<meta name=description content="Un mix de glandouille, informatique, drone, iles et surtout des tests divers">
 <meta property="og:title" content="Remarque sur l'éditeur de markdown de dillinger">
 <meta name=twitter:title content="Remarque sur l'éditeur de markdown de dillinger">
 <meta property="og:type" content="article">
@@ -61,11 +61,6 @@ Il a une prévisualisation instantanée du markdown avec un export pdf pour le d
 <p>La limite que je vois actuellement, c&rsquo;est qu&rsquo;il faut d&rsquo;abord créer le document sur <a href=https://github.com target=_blank>github</a> pour après l&rsquo;importer dans <a href=http://dillinger.io target=_blank>dillinger</a> pour qu&rsquo;il se sauvegarde automatiquement sur <a href=https://github.com target=_blank>github</a>.</p>
 </div>
 </article>
-<div class="license markdown-body">
-<blockquote>
-<p>Sauf indication contraire, le contenu de ce site est mis à disposition selon les termes de la Licence <a rel=license href=http://creativecommons.org/licenses/by-nc-sa/4.0/ target=_blank>CC BY-NC-SA 4.0</a>.</p>
-</blockquote>
-</div>
 <div class=post-comment data-comment=disqus>
 <span class=post-comment-notloaded>
 <i class="iconfont icon-chatbox-ellipses-sharp"></i>&nbsp;Télécharger les commentaires
