--- a/hearthstone-bras-fer-echecs/index.html
+++ b/hearthstone-bras-fer-echecs/index.html
@@ -16,7 +16,7 @@
 <meta name=theme-color content="#ffffff">
 <title>Hearthstone, bras fer echecs pour la semaine 201640 - WaKaN's blog</title>
 <meta name=author content="wakan">
-<meta name=description content="Un mix de glandouille, informatique, drone, iles et sutour des tests divers">
+<meta name=description content="Un mix de glandouille, informatique, drone, iles et surtout des tests divers">
 <meta property="og:title" content="Hearthstone, bras fer echecs pour la semaine 201640">
 <meta name=twitter:title content="Hearthstone, bras fer echecs pour la semaine 201640">
 <meta property="og:type" content="article">
@@ -78,11 +78,6 @@ il y a quatre règles à garder en tête :</p>
 <p>En cas de problème de compréhension, je vous mets à disposition un lexique des termes de hearthstone : <a href=http://www.millenium.org/hearthstone-heroes-of-warcraft/accueil/guides/lexique-des-termes-du-jeu-lexique-definitions-des-termes-techniques-du-jeu-de-cartes-101316 target=_blank>lexique</a></p>
 </div>
 </article>
-<div class="license markdown-body">
-<blockquote>
-<p>Sauf indication contraire, le contenu de ce site est mis à disposition selon les termes de la Licence <a rel=license href=http://creativecommons.org/licenses/by-nc-sa/4.0/ target=_blank>CC BY-NC-SA 4.0</a>.</p>
-</blockquote>
-</div>
 <div class=post-comment data-comment=disqus>
 <span class=post-comment-notloaded>
 <i class="iconfont icon-chatbox-ellipses-sharp"></i>&nbsp;Télécharger les commentaires
