--- a/zoo-guyane/index.html
+++ b/zoo-guyane/index.html
@@ -16,7 +16,7 @@
 <meta name=theme-color content="#ffffff">
 <title>Visite du zoo de Guyane - WaKaN's blog</title>
 <meta name=author content="wakan">
-<meta name=description content="Un mix de glandouille, informatique, drone, iles et sutour des tests divers">
+<meta name=description content="Un mix de glandouille, informatique, drone, iles et surtout des tests divers">
 <meta property="og:title" content="Visite du zoo de Guyane">
 <meta name=twitter:title content="Visite du zoo de Guyane">
 <meta property="og:type" content="article">
@@ -70,11 +70,6 @@ les animaux dans leur environnement naturel.
 </p>
 </div>
 </article>
-<div class="license markdown-body">
-<blockquote>
-<p>Sauf indication contraire, le contenu de ce site est mis à disposition selon les termes de la Licence <a rel=license href=http://creativecommons.org/licenses/by-nc-sa/4.0/ target=_blank>CC BY-NC-SA 4.0</a>.</p>
-</blockquote>
-</div>
 <div class=post-comment data-comment=disqus>
 <span class=post-comment-notloaded>
 <i class="iconfont icon-chatbox-ellipses-sharp"></i>&nbsp;Télécharger les commentaires
