--- a/404.html
+++ b/404.html
@@ -51,6 +51,9 @@
 <a href=/blog/>Home</a>
 </li>
 <li>
+<a href=/blog/search/>Search</a>
+</li>
+<li>
 <a href=/blog/index.xml>RSS</a>
 </li>
 </ul>
@@ -97,6 +100,9 @@
 <ul>
 <li>
 <a href=/blog/>Home</a>
+</li>
+<li>
+<a href=/blog/search/>Search</a>
 </li>
 <li>
 <a href=/blog/index.xml>RSS</a>
