--- a/attaqueddos/index.html
+++ b/attaqueddos/index.html
@@ -104,6 +104,9 @@ Cela corrige des failles de sécurité exploitées par les petits hackers sans e
 <a href=/blog/>Home</a>
 </li>
 <li>
+<a href=/blog/search/>Search</a>
+</li>
+<li>
 <a href=/blog/index.xml>RSS</a>
 </li>
 </ul>
@@ -159,6 +162,9 @@ Cela corrige des failles de sécurité exploitées par les petits hackers sans e
 <ul>
 <li>
 <a href=/blog/>Home</a>
+</li>
+<li>
+<a href=/blog/search/>Search</a>
 </li>
 <li>
 <a href=/blog/index.xml>RSS</a>
