--- a/deadlinkchecker/index.html
+++ b/deadlinkchecker/index.html
@@ -72,6 +72,9 @@
 <a href=/blog/>Home</a>
 </li>
 <li>
+<a href=/blog/search/>Search</a>
+</li>
+<li>
 <a href=/blog/index.xml>RSS</a>
 </li>
 </ul>
@@ -124,6 +127,9 @@
 <ul>
 <li>
 <a href=/blog/>Home</a>
+</li>
+<li>
+<a href=/blog/search/>Search</a>
 </li>
 <li>
 <a href=/blog/index.xml>RSS</a>
