--- a/second-hugo-post/index.html
+++ b/second-hugo-post/index.html
@@ -78,6 +78,9 @@ Text après youtube sans espace</p>
 <a href=/blog/>Home</a>
 </li>
 <li>
+<a href=/blog/search/>Search</a>
+</li>
+<li>
 <a href=/blog/index.xml>RSS</a>
 </li>
 </ul>
@@ -126,6 +129,9 @@ Text après youtube sans espace</p>
 <ul>
 <li>
 <a href=/blog/>Home</a>
+</li>
+<li>
+<a href=/blog/search/>Search</a>
 </li>
 <li>
 <a href=/blog/index.xml>RSS</a>
