--- a/depart-vacance-guyane/index.html
+++ b/depart-vacance-guyane/index.html
@@ -90,6 +90,9 @@ Pour le contrôle de sécurité, c&rsquo;est toujours un peu plus compliqué à 
 <a href=/blog/>Home</a>
 </li>
 <li>
+<a href=/blog/search/>Search</a>
+</li>
+<li>
 <a href=/blog/index.xml>RSS</a>
 </li>
 </ul>
@@ -138,6 +141,9 @@ Pour le contrôle de sécurité, c&rsquo;est toujours un peu plus compliqué à 
 <ul>
 <li>
 <a href=/blog/>Home</a>
+</li>
+<li>
+<a href=/blog/search/>Search</a>
 </li>
 <li>
 <a href=/blog/index.xml>RSS</a>
