--- a/dillinger-markdown-editor/index.html
+++ b/dillinger-markdown-editor/index.html
@@ -77,6 +77,9 @@ Il a une prévisualisation instantanée du markdown avec un export pdf pour le d
 <a href=/blog/>Home</a>
 </li>
 <li>
+<a href=/blog/search/>Search</a>
+</li>
+<li>
 <a href=/blog/index.xml>RSS</a>
 </li>
 </ul>
@@ -125,6 +128,9 @@ Il a une prévisualisation instantanée du markdown avec un export pdf pour le d
 <ul>
 <li>
 <a href=/blog/>Home</a>
+</li>
+<li>
+<a href=/blog/search/>Search</a>
 </li>
 <li>
 <a href=/blog/index.xml>RSS</a>
