--- a/domoticz-telegram/index.html
+++ b/domoticz-telegram/index.html
@@ -123,6 +123,9 @@ Pour moi avec l&rsquo;url suivante [https://api.telegram.org/bot784324329:EETRNJ
 <a href=/blog/>Home</a>
 </li>
 <li>
+<a href=/blog/search/>Search</a>
+</li>
+<li>
 <a href=/blog/index.xml>RSS</a>
 </li>
 </ul>
@@ -176,6 +179,9 @@ Pour moi avec l&rsquo;url suivante [https://api.telegram.org/bot784324329:EETRNJ
 <ul>
 <li>
 <a href=/blog/>Home</a>
+</li>
+<li>
+<a href=/blog/search/>Search</a>
 </li>
 <li>
 <a href=/blog/index.xml>RSS</a>
