--- a/first-hugo-post/index.html
+++ b/first-hugo-post/index.html
@@ -72,6 +72,9 @@ Une fois l&rsquo;après midi passé, ils sont autonomes pour gérer eux-mêmes l
 <a href=/blog/>Home</a>
 </li>
 <li>
+<a href=/blog/search/>Search</a>
+</li>
+<li>
 <a href=/blog/index.xml>RSS</a>
 </li>
 </ul>
@@ -120,6 +123,9 @@ Une fois l&rsquo;après midi passé, ils sont autonomes pour gérer eux-mêmes l
 <ul>
 <li>
 <a href=/blog/>Home</a>
+</li>
+<li>
+<a href=/blog/search/>Search</a>
 </li>
 <li>
 <a href=/blog/index.xml>RSS</a>
