--- a/hearthstone-bras-fer-echecs/index.html
+++ b/hearthstone-bras-fer-echecs/index.html
@@ -94,6 +94,9 @@ il y a quatre règles à garder en tête :</p>
 <a href=/blog/>Home</a>
 </li>
 <li>
+<a href=/blog/search/>Search</a>
+</li>
+<li>
 <a href=/blog/index.xml>RSS</a>
 </li>
 </ul>
@@ -142,6 +145,9 @@ il y a quatre règles à garder en tête :</p>
 <ul>
 <li>
 <a href=/blog/>Home</a>
+</li>
+<li>
+<a href=/blog/search/>Search</a>
 </li>
 <li>
 <a href=/blog/index.xml>RSS</a>
