--- a/manger-carte-ticket-resto/index.html
+++ b/manger-carte-ticket-resto/index.html
@@ -122,6 +122,9 @@ Il faudra avoir accès au compte de contact pour valider la demande (souvent l&r
 <a href=/blog/>Home</a>
 </li>
 <li>
+<a href=/blog/search/>Search</a>
+</li>
+<li>
 <a href=/blog/index.xml>RSS</a>
 </li>
 </ul>
@@ -178,6 +181,9 @@ Il faudra avoir accès au compte de contact pour valider la demande (souvent l&r
 <ul>
 <li>
 <a href=/blog/>Home</a>
+</li>
+<li>
+<a href=/blog/search/>Search</a>
 </li>
 <li>
 <a href=/blog/index.xml>RSS</a>
